Full Web Functionality

--- a/WebPages/driver.html
+++ b/WebPages/driver.html
@@ -7,7 +7,19 @@
 <body>
 
 <a href="add_user.html">Add User</a><br>
-<a href="add_door.html">Add Door</a>
+<a href="add_door.html">Add Door</a><br>
+<a href="add_dept.html">Add Department</a><br>
+<a href="remove_user.html">Remove User</a><br>
+<a href="remove_door.html">Remove Door</a><br>
+<a href="remove_dept.html">Remove Dept</a><br>
+<a href="add_door_to_elevated.html">Add Door to Elevated</a><br>
+<a href="add_dept_to_user.html">Add Department to User</a><br>
+<a href="add_dept_to_door.html">Add Department to Door</a><br>
+<a href="open_door.html">Open Door</a><br>
+
+
+
+
 
 
 </body>
